@@ -301,7 +301,7 @@ static type_name type_names[] = {
     { "DIRECTOR", DIRECTOR },
     { "GIRDLE", GIRDLE },
     { "FORCE", FORCE },
-    { "POTION_EFFECT", POTION_EFFECT },
+    { "POTION_RESIST_EFFECT", POTION_RESIST_EFFECT },
     { "EVENT_CONNECTOR", EVENT_CONNECTOR },
     { "CLOSE_CON", CLOSE_CON },
     { "CONTAINER", CONTAINER },
